@@ -29,6 +29,7 @@ nobase_dist_pkgdata_DATA = \
 	include/calloca.h \
 	include/cmath.h \
 	include/cfloat.h \
+	include/bits/float.h \
 	include/sac_helpers.h \
 	include/svp/argslot.h \
 	include/svp/assert.h \
